<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="somesh.calculatorapp.ScientificCal"
    tools:showIn="@layout/activity_scientific_cal">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="true"
        android:cursorVisible="false"
        android:focusableInTouchMode="true"
        android:textAlignment="textEnd"
        android:gravity="end"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:cursorVisible="false"
        android:textAlignment="textEnd"
        android:gravity="end"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/square"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/drawable"
        android:layout_alignParentStart="true"
        android:text="@string/square"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:id="@+id/xpowy"
        android:layout_alignBottom="@+id/square"
        android:layout_toRightOf="@+id/square"
        android:layout_toEndOf="@+id/square"
        android:text="@string/xpown"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="log"
        android:id="@+id/log"
        android:layout_alignBottom="@+id/xpowy"
        android:layout_toRightOf="@+id/xpowy"
        android:layout_toEndOf="@+id/xpowy"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginTop="5dp"
        android:text="@string/sin"
        android:id="@+id/sin"
        android:layout_below="@+id/square"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:text="@string/cos"
        android:id="@+id/cos"
        android:layout_alignBottom="@+id/sin"
        android:layout_alignLeft="@+id/xpowy"
        android:layout_alignStart="@+id/xpowy"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="@string/tan"
        android:id="@+id/tan"
        android:layout_alignBottom="@+id/cos"
        android:layout_toRightOf="@+id/cos"
        android:layout_toEndOf="@+id/cos"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:id="@+id/toggle"
        android:text="@string/toggle"
        android:layout_marginTop="5dp"
        android:textColor="#a0a"
        android:layout_below="@+id/sin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:onClick="onClick"
        android:textAllCaps="false"
        android:layout_alignRight="@+id/sin"
        android:layout_alignEnd="@+id/sin" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="@string/factorial"
        android:id="@+id/factorial"
        android:layout_alignBottom="@+id/toggle"
        android:layout_toRightOf="@+id/toggle"
        android:layout_toEndOf="@+id/toggle"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:id="@+id/sqrt"
        android:layout_alignBottom="@+id/factorial"
        android:layout_toRightOf="@+id/factorial"
        android:layout_toEndOf="@+id/factorial"
        android:text="@string/sqrt"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:textColor="#F44336"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/clear"
        android:id="@+id/clear"
        android:layout_above="@+id/tan"
        android:layout_toRightOf="@+id/log"
        android:layout_toEndOf="@+id/log"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/backspace"
        android:id="@+id/backSpace"
        android:layout_above="@+id/sqrt"
        android:layout_toRightOf="@+id/tan"
        android:layout_toEndOf="@+id/tan"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginBottom="5dp"
        android:text="@string/pi"
        android:id="@+id/pi"
        android:onClick="onClick"
        android:textAllCaps="false"
        android:layout_below="@+id/backSpace"
        android:layout_alignLeft="@+id/backSpace"
        android:layout_alignStart="@+id/backSpace" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginTop="5dp"
        android:text="7"
        android:id="@+id/num7"
        android:layout_below="@+id/toggle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="8"
        android:id="@+id/num8"
        android:layout_alignBottom="@+id/num7"
        android:layout_toRightOf="@+id/num7"
        android:layout_toEndOf="@+id/num7"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="9"
        android:id="@+id/num9"
        android:layout_alignBottom="@+id/num8"
        android:layout_toRightOf="@+id/num8"
        android:layout_toEndOf="@+id/num8"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginTop="5dp"
        android:text="4"
        android:id="@+id/num4"
        android:layout_below="@+id/num7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:text="5"
        android:id="@+id/num5"
        android:layout_alignBottom="@+id/num4"
        android:layout_alignLeft="@+id/num8"
        android:layout_alignStart="@+id/num8"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="6"
        android:id="@+id/num6"
        android:layout_alignBottom="@+id/num5"
        android:layout_toRightOf="@+id/num5"
        android:layout_toEndOf="@+id/num5"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginTop="5dp"
        android:text="1"
        android:id="@+id/num1"
        android:layout_below="@+id/num4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:text="2"
        android:id="@+id/num2"
        android:layout_alignBottom="@+id/num1"
        android:layout_alignLeft="@+id/num5"
        android:layout_alignStart="@+id/num5"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="3"
        android:id="@+id/num3"
        android:layout_alignBottom="@+id/num2"
        android:layout_toRightOf="@+id/num2"
        android:layout_toEndOf="@+id/num2"
        android:onClick="onClick" />

    <!--<Button-->
        <!--android:layout_width="55dp"-->
        <!--android:layout_height="55dp"-->
        <!--android:background="@drawable/drawable"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:text="@string/posneg"-->
        <!--android:id="@+id/posneg"-->
        <!--android:layout_below="@+id/num1"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:textSize="20dp"-->
        <!--android:onClick="onClick" />-->

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginTop="5dp"
        android:text="0"
        android:id="@+id/num0"
        android:onClick="onClick"
        android:layout_below="@+id/num2"
        android:layout_alignLeft="@+id/num2"
        android:layout_alignStart="@+id/num2" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:text="."
        android:id="@+id/dot"
        android:layout_alignBottom="@+id/num0"
        android:layout_toRightOf="@+id/num0"
        android:layout_toEndOf="@+id/num0"
        android:textSize="20dp"
        android:nestedScrollingEnabled="false"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:text="@string/divide"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/divide"
        android:layout_above="@+id/num6"
        android:layout_toRightOf="@+id/num9"
        android:layout_toEndOf="@+id/num9"
        android:background="@drawable/drawable"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginBottom="5dp"
        android:text="x"
        android:id="@+id/multiply"
        android:layout_above="@+id/num3"
        android:layout_alignLeft="@+id/divide"
        android:layout_alignStart="@+id/divide"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginBottom="5dp"
        android:text="-"
        android:id="@+id/minus"
        android:textSize="20dp"
        android:onClick="onClick"
        android:layout_above="@+id/plus"
        android:layout_alignLeft="@+id/multiply"
        android:layout_alignStart="@+id/multiply" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:text="+"
        android:id="@+id/plus"
        android:layout_alignBottom="@+id/dot"
        android:layout_alignLeft="@+id/minus"
        android:layout_alignStart="@+id/minus"
        android:onClick="onClick" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:text="="
        android:textSize="40sp"
        android:id="@+id/equal"
        android:onClick="onClick"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:layout_alignTop="@+id/clear"
        android:layout_alignBottom="@+id/backSpace"
        android:layout_toRightOf="@+id/clear"
        android:layout_toEndOf="@+id/clear" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/openBracket"
        android:textColor="#d33"
        android:id="@+id/openBracket"
        android:onClick="onClick"
        android:layout_above="@+id/plus"
        android:layout_alignLeft="@+id/history"
        android:layout_alignStart="@+id/history" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:layout_marginLeft="5dp"
        android:textColor="#d33"
        android:text="@string/closeBracket"
        android:id="@+id/closeBracket"
        android:onClick="onClick"
        android:layout_alignTop="@+id/plus"
        android:layout_toRightOf="@+id/plus"
        android:layout_toEndOf="@+id/plus" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/drawable"
        android:text="@string/mode1"
        android:id="@+id/mode"
        android:textColor="#4A148C"
        android:onClick="onClick"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"

        android:text="@string/history"
        android:id="@+id/history"
        android:onClick="onClick"
        android:layout_above="@+id/num7"
        android:layout_toRightOf="@+id/pi"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

</RelativeLayout>
</ScrollView>