<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#e0e0e0"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:id="@+id/relative_lay">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:textSize="20sp"
                    android:id="@+id/text1"
                    android:layout_marginTop="20dp"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:textColor="#262626" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rg"
                    android:layout_below="@+id/text1">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro1"
                        android:id="@+id/checkBox"
                        android:typeface="serif"
                        android:layout_marginTop="20dp"
                        android:textSize="17sp"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro2"
                        android:id="@+id/checkBox2"
                        android:typeface="serif"
                        android:layout_below="@+id/checkBox"
                        android:textSize="17sp"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intro3"
                        android:id="@+id/checkBox3"
                        android:typeface="serif"
                        android:layout_below="@+id/checkBox2"
                        android:textSize="17sp" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="Give us Score(out of 10)"
                    android:gravity="left"
                    android:id="@+id/text2"
                    android:layout_below="@+id/rg"
                    android:textStyle="bold"
                    android:textColor="#262626"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_below="@+id/text2"
                    android:layout_marginTop="15dp"
                    android:layout_alignLeft="@+id/text2"
                    android:max="10"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/seekBar"
                    android:id="@+id/texx"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SUBMIT"
                    android:id="@+id/button"
                    android:typeface="serif"
                    android:layout_marginTop="40dp"
                    android:layout_below="@+id/suggestions"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorPrimary"
                    android:textColor="#fff"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/suggestions"
                    android:layout_below="@+id/texx"
                    android:layout_marginTop="20dp"
                    android:hint="Tell Suggestions(if any)"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>




